RESOLVED FIXED186326
REGRESSION (231817): Videos permanently blank out after switching out of a tab and back in
https://bugs.webkit.org/show_bug.cgi?id=186326
Summary REGRESSION (231817): Videos permanently blank out after switching out of a ta...
Jer Noble
Reported 2018-06-05 16:25:41 PDT
REGRESSION (231817): Videos permanently blank out after switching out of a tab and back in
Attachments
Patch (5.52 KB, patch)
2018-06-05 16:30 PDT, Jer Noble
no flags
Archive of layout-test-results from ews100 for mac-sierra (2.33 MB, application/zip)
2018-06-05 17:35 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews106 for mac-sierra-wk2 (2.75 MB, application/zip)
2018-06-05 17:43 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews114 for mac-sierra (3.00 MB, application/zip)
2018-06-05 18:15 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews124 for ios-simulator-wk2 (2.22 MB, application/zip)
2018-06-05 18:17 PDT, EWS Watchlist
no flags
Patch (4.60 KB, patch)
2018-06-05 18:31 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2018-06-05 16:26:07 PDT
Jer Noble
Comment 2 2018-06-05 16:30:45 PDT
EWS Watchlist
Comment 3 2018-06-05 17:35:58 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 4 2018-06-05 17:35:59 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 5 2018-06-05 17:43:10 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 6 2018-06-05 17:43:11 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 7 2018-06-05 18:15:53 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 8 2018-06-05 18:15:54 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 9 2018-06-05 18:17:22 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 10 2018-06-05 18:17:24 PDT Comment hidden (obsolete)
Jer Noble
Comment 11 2018-06-05 18:31:07 PDT
WebKit Commit Bot
Comment 12 2018-06-05 21:25:54 PDT
Comment on attachment 342017 [details] Patch Clearing flags on attachment: 342017 Committed r232534: <https://trac.webkit.org/changeset/232534>
WebKit Commit Bot
Comment 13 2018-06-05 21:25:56 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 14 2018-06-07 15:37:18 PDT
media/video-buffering-allowed.html was flaky since it was added in https://trac.webkit.org/changeset/231817/webkit, but after this change it is failing very frequently on macOS debug bots. --- /Volumes/Data/slave/highsierra-debug-tests-wk1/build/layout-test-results/media/video-buffering-allowed-expected.txt +++ /Volumes/Data/slave/highsierra-debug-tests-wk1/build/layout-test-results/media/video-buffering-allowed-actual.txt @@ -33,6 +33,6 @@ EXPECTED (internals.elementShouldBufferData(video) == 'false') OK * Remove display:none from the video element. RUN(video.style.removeProperty("display")) -EXPECTED (internals.elementShouldBufferData(video) == 'true') OK +FAIL: did not end fast enough END OF TEST https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=media%2Fvideo-buffering-allowed.html
Note You need to log in before you can comment on or make changes to this bug.