REGRESSION (231817): Videos permanently blank out after switching out of a tab and back in https://bugs.webkit.org/show_bug.cgi?id=186326 <rdar://problem/40778157>

Reviewed by Eric Carlson.

Source/WebCore:

Check whether the element is visible in the viewport when the web view itself becomes visible, and if so, clear the m_elementIsHiddenUntilVisibleInViewport flag.

* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::visibilityChanged):
* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:

LayoutTests:

* media/video-buffering-allowed-expected.txt:
* media/video-buffering-allowed.html:


Canonical link: https://commits.webkit.org/201715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232534 268f45cc-cd09-0410-ab3c-d52691b4dbfc